--- a/src/css/highlights.css
+++ b/src/css/highlights.css
@@ -35,7 +35,7 @@
     position: absolute;
     width: auto;
     z-index: 2;
-    transition: all ease 200ms;
+    transition: all ease 150ms;
 }
 
 .globe span {
@@ -163,4 +163,142 @@
 .highlight-two img {
     height: calc(650rem * 0.0625);
     width: auto;
+}
+
+@media (max-width: 1024px) {
+    /* .lg {
+        display: none;
+    }
+    .mb {
+        display: block;
+    } */
+    .highlight-one {
+        justify-content: center;
+    }
+    .globe {
+        height: calc(249rem * 0.0625);
+        width: calc(249rem * 0.0625);
+    }
+    .globe span {
+        font-size: 1.35rem;
+    }
+    .highlight-two {
+        justify-content: center;
+    }
+    .highlight-two img {
+        height: calc(270rem * 0.0625);
+    }
+    .core-main {
+        height: calc(100.33rem * 0.0625);
+        transform: translate(73px, 74px);
+    }
+    
+    .commitment {
+        height: calc(88.09rem * 0.0625);
+        transform: translate(79px, -35px);
+    }
+    
+    .commitment:hover {
+        height: calc(88.09rem * 0.0625);
+        transform: translate(79px, -35px);
+    }
+    
+    .integrity {
+        height: calc(247.34rem * 0.0625);
+        transform: translate(383px, 18px);
+    }
+    
+    .integrity:hover {
+        height: calc(347.34rem * 0.0625);
+        transform: translate(386px, -58px);
+        z-index: 3;
+    }
+    
+    .diligence {
+        height: calc(100.63rem * 0.0625);
+        transform: translate(4px, 4px);
+    }
+    
+    .diligence:hover {
+        height: calc(247.34rem * 0.0625);
+        transform: translate(-90px, -58px);
+        z-index: 3;
+    }
+    
+    .accountability {
+        height: calc(262.96rem * 0.0625);
+        transform: translate(520px, 192px);
+    }
+    
+    .accountability:hover {
+        height: calc(362.96rem * 0.0625);
+        transform: translate(520px, 140px);
+        z-index: 3;
+    }
+    
+    .excellence {
+        height: calc(247.61rem * 0.0625);
+        transform: translate(383px, 388px);
+    }
+    
+    .excellence:hover {
+        height: calc(347.61rem * 0.0625);
+        transform: translate(383px, 388px);
+        z-index: 3;
+    }
+    
+    .innovation {
+        height: calc(191.11rem * 0.0625);
+        transform: translate(184px, 520px);
+    }
+    
+    .innovation:hover {
+        height: calc(291.11rem * 0.0625);
+        transform: translate(114px, 520px);
+        z-index: 3;
+    }
+    
+    .customer-focus {
+        height: calc(247.36rem * 0.0625);
+        transform: translate(-6px, 395px);
+    }
+    
+    .customer-focus:hover {
+        height: calc(347.36rem * 0.0625);
+        transform: translate(-46px, 355px);
+        z-index: 3;
+    }
+    
+    .core-logo {
+        height: calc(28.57rem * 0.0625);
+        transform: translate(-85px, 291px);
+    }
+    
+    .line-diligence {
+        transform: translate(40px, 59px) rotate(45deg);
+    }
+    
+    .line-commitment {
+        transform: translate(86px, 50px) rotate(90deg);
+    }
+    
+    .line-integrity {
+        transform: translate(341px, 196px) rotate(-45deg);
+    }
+    
+    .line-accountability {
+        transform: translate(410px, 290px);
+    }
+    
+    .line-excellence {
+        transform: translate(371px, 402px) rotate(45deg);
+    }
+    
+    .line-innovation {
+        transform: translate(266px, 444px) rotate(90deg);
+    }
+    
+    .line-customer-focus {
+        transform: translate(158px, 375px) rotate(-45deg);
+    }
 }
